// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs - hidden 1`] = `
<div
  className="tabs"
>
  <div
    className="tab__column"
  >
    <ul
      className="tab__ul"
    >
      <li
        className="tab tab--active"
        onClick={[Function]}
      >
        How to use this
      </li>
      <li
        className="tab"
        onClick={[Function]}
      >
        What is this
      </li>
      <li
        className="tab"
        onClick={[Function]}
      >
        Get involved
      </li>
    </ul>
    <button
      className="tab__close"
      onClick={[MockFunction]}
    >
      <svg
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="15"
          x2="9"
          y1="9"
          y2="15"
        />
        <line
          x1="9"
          x2="15"
          y1="9"
          y2="15"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Tabs - visible 1`] = `
<div
  className="tabs tabs--visible"
>
  <div
    className="tab__column"
  >
    <ul
      className="tab__ul"
    >
      <li
        className="tab tab--active"
        onClick={[Function]}
      >
        How to use this
      </li>
      <li
        className="tab"
        onClick={[Function]}
      >
        What is this
      </li>
      <li
        className="tab"
        onClick={[Function]}
      >
        Get involved
      </li>
    </ul>
    <button
      className="tab__close"
      onClick={[MockFunction]}
    >
      <svg
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="15"
          x2="9"
          y1="9"
          y2="15"
        />
        <line
          x1="9"
          x2="15"
          y1="9"
          y2="15"
        />
      </svg>
    </button>
  </div>
</div>
`;
